[package]
name = "rogue"
description = "A command-line client for Korg Logue devices"
version = "0.1.0"
authors = ["Sebastian Schmidt <yath@yath.de>"]
repository = "https://github.com/yath/rogue"
homepage = "https://github.com/yath/rogue"
documentation = "https://github.com/yath/rogue"
keywords = ["cli", "logue", "nutekt", "korg"]
categories = ["command-line-utilities"]
license = "GPL-2.0-only"
edition = "2021"
readme = "README.md"

[badges]
maintenance = { status = "passively-maintained" }

[patch.crates-io]
midir = { git = "https://github.com/yath/midir", branch = "direct-output-0.8.0" }

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.0.32", features = ["derive"] }
crc = "3.0.0"
log = "0.4.17"
midir = "0.8.0"
regex = { version = "1.7.0", default-features = false, features = ["std", "unicode-perl"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
simple_logger = "4.0.0"
snafu = "0.7.4"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
time = { version = "0.3.17", features = ["local-offset"] }
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
rand = "0.8.5"
